--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(example_simulate_bmnr)
 export(extract_to_data_frame)
 export(get_stan_controls)
 export(gp_matern32_cov_ard)
+export(parse_bmnr_formula)
 export(printer_tabset)
 export(render_bmnr)
 export(s3_register)
