--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bmnr
 Title: Bayesian Matrix Normal Regression
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: 
     person(given = "Josh",
            family = "Cowley",
@@ -20,14 +20,20 @@ Depends:
     R (>= 3.4.0)
 Imports:
     dplyr,
+    ggplot2,
+    knitr,
+    knitrProgressBar,
     matrixNormal,
     methods,
+    mvtnorm,
+    purrr,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rlang,
     rstan (>= 2.18.1),
     rstantools (>= 2.3.1.1),
-    tibble
+    tibble,
+    tidyr
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
@@ -37,5 +43,7 @@ LinkingTo:
     StanHeaders (>= 2.18.0)
 SystemRequirements: GNU make
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    patchwork,
+    quarto
 Config/testthat/edition: 3
