--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,28 @@
 S3method(autoplot,bmnrfit)
 S3method(bmnr,bmnr_sim)
 S3method(bmnr,formula)
+S3method(extract_posterior_predictive_pars,bmnrfit)
+S3method(extract_posterior_predictive_pars,bmnrfit_mvrnorm)
+S3method(predict,bmnrfit)
 export(.set_bmnr_render_options)
 export(autoplot)
 export(bmnr)
 export(bmnr_layer)
 export(bmnr_prior)
 export(bmnrfit_class)
+export(bmnrfit_mvrnorm_class)
+export(bmnrfit_mvrnorm_simstudy_class)
 export(bmnrfit_simstudy_class)
 export(example_simulate_bmnr)
+export(extract_covar_s)
+export(extract_covar_y)
+export(extract_gp_length)
+export(extract_linpred)
+export(extract_pointwise_log_lik)
+export(extract_posterior_predictive_pars)
+export(extract_regr)
 export(extract_to_data_frame)
+export(get_names_from_bmnrfit)
 export(get_stan_controls)
 export(gp_matern32_cov_ard)
 export(parse_bmnr_formula)
@@ -20,6 +33,8 @@ export(render_bmnr)
 export(s3_register)
 export(simulate_bmnr)
 exportClasses(bmnrfit)
+exportClasses(bmnrfit_mvrnorm)
+exportClasses(bmnrfit_mvrnorm_simstudy)
 exportClasses(bmnrfit_simstudy)
 exportMethods(extract_to_data_frame)
 import(Rcpp)
