Post-submission commit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,10 @@
 S3method(autoplot,bmnrfit)
 S3method(bmnr,bmnr_sim)
 S3method(bmnr,formula)
-S3method(extract_posterior_predictive_pars,bmnrfit)
-S3method(extract_posterior_predictive_pars,bmnrfit_mvrnorm)
+S3method(extract_pointwise_log_lik,bmnrfit)
+S3method(extract_pointwise_log_lik,bmnrfit_mvrnorm)
 S3method(predict,bmnrfit)
+S3method(predict,bmnrfit_mvrnorm)
 export(.set_bmnr_render_options)
 export(autoplot)
 export(bmnr)
@@ -16,12 +17,12 @@ export(bmnrfit_mvrnorm_class)
 export(bmnrfit_mvrnorm_simstudy_class)
 export(bmnrfit_simstudy_class)
 export(example_simulate_bmnr)
+export(extract_corr_y)
 export(extract_covar_s)
 export(extract_covar_y)
 export(extract_gp_length)
 export(extract_linpred)
 export(extract_pointwise_log_lik)
-export(extract_posterior_predictive_pars)
 export(extract_regr)
 export(extract_to_data_frame)
 export(get_names_from_bmnrfit)
