--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bmnr
 Title: Bayesian Matrix Normal Regression
-Version: 0.1.0
+Version: 0.2.0
 Authors@R:
     person(given = "Josh",
            family = "Cowley",
@@ -20,8 +20,13 @@ Depends:
     R (>= 3.4.0)
 Imports:
     dplyr,
+    ggplot2,
+    knitr,
+    knitrProgressBar,
     matrixNormal,
     methods,
+    mvtnorm,
+    purrr,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rlang,
